# terraform-registry

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  main.rs  providers.rs  routes.rs  types.rs
src/providers/: fake.rs  gitlabrelease.rs  mod.rs
