[package]
name = "terraform-registry"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A Rust-based Terraform registry implementation"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.100"
gitlab = "0.1807.0"
serde_derive = "1.0.228"
urlencoding = "2.1.3"
semver = "1.0.27"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
all = "deny"
pedantic = { level = "warn", priority = -1 }
